# privaturl

./: .gitignore  Cargo.toml  README.md
src/: main.rs
template/: index.html
