[package]
name = "privaturl"
version = "0.1.0"
edition = "2021"
authors = ["Joaquin Pereyra <joaquinlpereyra@gmail.com>"]
description = "Generate HTML that reveals data only with the correct passphrase"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.6.0"
clap = { version = "4.4.6", features = ["derive"] }
aes-gcm = "0.10.3"
base64 = "0.21.4"
